更新了文档主页

--- a/blog/简单案例分析一/2024-04-22-简单案例分析：一.md
+++ b/blog/简单案例分析一/2024-04-22-简单案例分析：一.md
@@ -1,6 +1,6 @@
 ﻿---
 slug: simple_1
-title: 简单案例分析：一（定时任务）
+title: 简单案例分析：案例一（定时任务）
 authors: [edgehacker]
 tags: [案例分析]
 ---
@@ -13,20 +13,18 @@ tags: [案例分析]
 
 <!-- truncate -->
 
-> 使用具体场景：17、18点时，每隔20分钟，定时显示一张随机图像
+使用具体场景：17、18 点时，每隔 20 分钟，定时显示一张随机图像。
 
 ## 一、创建定时任务
 
 :::info 注意
 
-定时任务本身不会执行任何功能
-其只会定时模拟直播间事件
-意味着到达指定时间，流程树会收到提前定义的事件
+定时任务本身不会执行任何功能，其只会定时模拟直播间事件，意味着到达指定时间，流程树会收到提前定义的事件。
 
 :::
 
 ![img](./img/1.png)
 ![img](./img/2.png)
 
-## 二、设置流程，匹配事件
+## 二、设置流程匹配事件
 ![img](./img/3.png)
